rabbitmq_cluster / osci / staging: adjust the queue names to match username
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/rabbitmq_cluster/tasks/apps.yml
+++ b/roles/rabbitmq_cluster/tasks/apps.yml
@@ -33,21 +33,21 @@
     queue_name: "{{ osci_pipeline_queue }}{{ env_suffix }}"
     message_ttl: 864000000
   loop:
-    - "osci-pipelines-queue-0{{ env_suffix }}"
-    - "osci-pipelines-queue-1{{ env_suffix }}"
-    - "osci-pipelines-queue-2{{ env_suffix }}"
-    - "osci-pipelines-queue-3{{ env_suffix }}"
-    - "osci-pipelines-queue-4{{ env_suffix }}"
-    - "osci-pipelines-queue-5{{ env_suffix }}"
-    - "osci-pipelines-queue-6{{ env_suffix }}"
-    - "osci-pipelines-queue-7{{ env_suffix }}"
-    - "osci-pipelines-queue-9{{ env_suffix }}"
-    - "osci-pipelines-queue-10{{ env_suffix }}"
-    - "osci-pipelines-queue-11{{ env_suffix }}"
-    - "osci-pipelines-queue-12{{ env_suffix }}"
-    - "osci-pipelines-queue-13{{ env_suffix }}"
-    - "osci-pipelines-queue-14{{ env_suffix }}"
-    - "osci-pipelines-queue-15{{ env_suffix }}"
+    - "osci-pipelines{{ env_suffix }}-queue-0"
+    - "osci-pipelines{{ env_suffix }}-queue-1"
+    - "osci-pipelines{{ env_suffix }}-queue-2"
+    - "osci-pipelines{{ env_suffix }}-queue-3"
+    - "osci-pipelines{{ env_suffix }}-queue-4"
+    - "osci-pipelines{{ env_suffix }}-queue-5"
+    - "osci-pipelines{{ env_suffix }}-queue-6"
+    - "osci-pipelines{{ env_suffix }}-queue-7"
+    - "osci-pipelines{{ env_suffix }}-queue-9"
+    - "osci-pipelines{{ env_suffix }}-queue-10"
+    - "osci-pipelines{{ env_suffix }}-queue-11"
+    - "osci-pipelines{{ env_suffix }}-queue-12"
+    - "osci-pipelines{{ env_suffix }}-queue-13"
+    - "osci-pipelines{{ env_suffix }}-queue-14"
+    - "osci-pipelines{{ env_suffix }}-queue-15"
   loop_control:
     loop_var: osci_pipeline_queue
   tags:
