rabbitmq_cluster: move nagios perms into main playbook in one place
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/rabbitmq_cluster/tasks/main.yml
+++ b/roles/rabbitmq_cluster/tasks/main.yml
@@ -254,6 +254,14 @@
         configure_priv: "^$"
         read_priv: "^$"
         write_priv: "^$"
+      - vhost: /mbs-private-queue
+        configure_priv: "^$"
+        read_priv: "^$"
+        write_priv: "^$"
+      - vhost: /centos-odcs
+        configure_priv: "^$"
+        read_priv: "^$"
+        write_priv: "^$"
     tags: monitoring
   when: env == "staging" and inventory_hostname.startswith('rabbitmq01')
   tags:
@@ -275,6 +283,14 @@
         read_priv: "^$"
         write_priv: "^$"
       - vhost: /public_pubsub
+        configure_priv: "^$"
+        read_priv: "^$"
+        write_priv: "^$"
+      - vhost: /mbs-private-queue
+        configure_priv: "^$"
+        read_priv: "^$"
+        write_priv: "^$"
+      - vhost: /centos-odcs
         configure_priv: "^$"
         read_priv: "^$"
         write_priv: "^$"
