pagure: define ADMIN_GROUP to a group that do not exists
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/pagure/templates/pagure.cfg
+++ b/roles/pagure/templates/pagure.cfg
@@ -31,7 +31,7 @@ FAS_OPENID_ENDPOINT = 'https://id.stg.fedoraproject.org/openid/'
 DB_URL = 'postgresql://{{ pagure_db_user }}:{{ pagure_db_pass }}@{{ pagure_db_host }}/{{ pagure_db_name }}'
 
 ### The FAS group in which the admin of pagure are
-ADMIN_GROUP = ""
+ADMIN_GROUP = "--"
 PAGURE_ADMIN_USERS = ["pingou", "kevin", "smooge"]
 
 # The publicly visible admin email address
