--- a/roles/koji_builder/tasks/main.yml
+++ b/roles/koji_builder/tasks/main.yml
@@ -330,4 +330,4 @@
   tags:
   - koji_builder
   - koji_builder/rngd
-  when: ansible_architecture != 's390x' or ansible_architecture != 'ppc64le'
+  when: ansible_architecture != 's390x' and ansible_architecture != 'ppc64le'
