Add podcast@fedoraproject.org alias

--- a/roles/fas_client/files/aliases.template
+++ b/roles/fas_client/files/aliases.template
@@ -217,6 +217,7 @@ infra-security: puiterwijk,kevin,smooge,codeblock
 webmaster: websites@lists.fedoraproject.org
 logo: rlerch@redhat.com,duffy@redhat.com
 ham-radio-exams: nb,jbwillia
+podcast: x3mboy,computerkid,riecatnor
 
 # Misc Aliases
 cvs-access: accounts
