Fix tasks/postfix.yaml and roles/basic/tasks/postfix.yaml to match
Found the reason that the definitions I had put were not
working. There were two different ones and i was looking at the wrong
one. Put the two tasks with the same logic so things should work no
matter which one is run.

--- a/roles/base/tasks/postfix.yml
+++ b/roles/base/tasks/postfix.yml
@@ -1,6 +1,8 @@
 - name: /etc/postfix/main.cf
   copy: src={{ item }} dest=/etc/postfix/main.cf
   with_first_found:
+    - "{{ postfix_maincf }}"
+    - "postfix/main.cf/main.cf.{{ ansible_fqdn }}"
     - "postfix/main.cf/main.cf.{{ inventory_hostname }}"
     - "postfix/main.cf/main.cf.{{ host_group }}"
     - "postfix/main.cf/main.cf.{{ postfix_group }}"
