--- a/tasks/postfix_basic.yml
+++ b/tasks/postfix_basic.yml
@@ -12,6 +12,7 @@
     - "{{ roles_path }}/base/files/postfix/main.cf/main.cf.{{ inventory_hostname }}"
     - "{{ roles_path }}/base/files/postfix/main.cf/main.cf.{{ host_group }}"
     - "{{ roles_path }}/base/files/postfix/main.cf/main.cf.{{ postfix_group }}"
+    - "{{ roles_path }}/base/files/postfix/main.cf/main.cf.{{ datacenter }}"
     - "{{ roles_path }}/base/files/postfix/main.cf/main.cf"
   notify:
   - restart postfix
