--- a/roles/distgit/pagure/templates/pagure.cfg
+++ b/roles/distgit/pagure/templates/pagure.cfg
@@ -233,7 +233,9 @@ ACLS = {
     'commit_flag': 'Flag a commit',
     "update_watch_status": "Update the watch status on a project",
     "tag_project": "Allows adding git tags to a project",
+{% if env == 'staging' %}
     "commit": "Commit to a git repository via http(s)",
+{% endif %}
 }
 
 REQUIRED_GROUPS = {
@@ -264,7 +266,9 @@ USER_ACLS = [
     'pull_request_merge',
     'modify_project',
     'update_watch_status',
+{% if env == 'staging' %}
     'commit',
+{% endif %}
 ]
 
 CROSS_PROJECT_ACLS = [
@@ -275,7 +279,9 @@ CROSS_PROJECT_ACLS = [
     'pull_request_merge',
     'pull_request_flag',
     'update_watch_status',
+{% if env == 'staging' %}
     'commit',
+{% endif %}
 ]
 
 ADMIN_API_ACLS = [
