Updating monitor-gating to work on new branch and look for latest rawhide tag.

--- a/roles/openshift-apps/monitor-gating/templates/monitor_gating.cfg
+++ b/roles/openshift-apps/monitor-gating/templates/monitor_gating.cfg
@@ -18,9 +18,9 @@ namespace = "rpms"
 name_single = "dummy-test-package-gloster"
 name_multi_1 = "dummy-test-package-crested"
 name_multi_2 = "dummy-test-package-rubino"
-branch = "master"
+branch = "rawhide"
 pagure_token = "{{ monitor_gating_pagure_token_stg }}"
-koji_end_tag = "f34"
+koji_end_tag = "f35"
 
 {% else %}
 fedpkg = "fedpkg"
@@ -34,7 +34,7 @@ bodhi = "https://bodhi.fedoraproject.org"
 bodhi-cli = "bodhi"
 bodhi-user = "packagerbot"
 bodhi-password = "{{ monitor_gating_packagerbot_pwd_prod }}"
-koji_end_tag = "f34"
+koji_end_tag = "f35"
 
 _env = "prod"
 _ci_env = "prod"
@@ -43,6 +43,6 @@ namespace = "rpms"
 name_single = "dummy-test-package-gloster"
 name_multi_1 = "dummy-test-package-crested"
 name_multi_2 = "dummy-test-package-rubino"
-branch = "master"
+branch = "rawhide"
 pagure_token = "{{ monitor_gating_pagure_token_prod }}"
 {% endif %}
