oraculum: use master branch for frontend build

--- a/roles/openshift-apps/oraculum/templates/buildconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/buildconfig.yml
@@ -41,7 +41,7 @@ spec:
     type: Git
     git:
       uri: 'https://pagure.io/fedora-qa/packager_dashboard.git'
-      ref: 'docker_stuff'
+      ref: 'master'
   strategy:
     type: Docker
     dockerStrategy:
