openshift-apps/flatpak-indexer: fix wrong URL to upstream repo
One of the references to the upstream repository referenced
https://pagure.io/flatpak-indexer, but at least for now, the code
lives at https://github.com/owtaylor/flatpak-indexer.

Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/roles/openshift-apps/flatpak-indexer/templates/buildconfig.yml
+++ b/roles/openshift-apps/flatpak-indexer/templates/buildconfig.yml
@@ -55,7 +55,7 @@ spec:
       - destinationDir: bin
         sourcePath: /usr/bin/time
     git:
-      uri: https://pagure.io/flatpak-indexer.git
+      uri: https://github.com/owtaylor/flatpak-indexer.git
       ref: "{{ flatpak_indexer_git_ref }}"
     type: Git
   strategy:
