Update storage configuration
* Specify a volumeName for the persistant volume claims (on initial deploy
  to staging, these PVC's got bound to random volume...)
* Name the PVC's to exactly match the volume names, including a -stg suffix
  for staging
* Reduce the requested size for the redis volume to 1Gi.

--- a/playbooks/openshift-apps/flatpak-indexer.yml
+++ b/playbooks/openshift-apps/flatpak-indexer.yml
@@ -33,7 +33,7 @@
 
   - role: openshift/object
     app: flatpak-indexer
-    file: storage.yml
+    template: storage.yml
     objectname: storage.yml
 
   - role: openshift/object
