toddlers: fix typo, staging is not a variable
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
+++ b/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
@@ -139,7 +139,7 @@ notify_admins = [
     "pingou@fedoraproject.org",
 ]
 # Use fasjson instead of FAS
-{% if env == staging %}
+{% if env == "staging" %}
 fasjson = true
 {% else %}
 fasjson = false
