This adds a config file for Fedora 33 osbs systems so that they do not try to bind to the master interfaces when osbs is also wanting to use dynamic binding.
Signed-off-by: Stephen Smoogen <ssmoogen@redhat.com>

--- a/playbooks/groups/osbs-cluster.yml
+++ b/playbooks/groups/osbs-cluster.yml
@@ -306,6 +306,12 @@
     - /srv/web/infra/ansible/vars/{{ ansible_distribution }}.yml
 
   tasks:
+    - name: install fedora dnsmasq specific top-config
+      copy:
+        src: "{{files}}/osbs/fedora-dnsmasq-master.conf.{{env}}"
+        dest: "/etc/dnsmasq.conf"
+      when:
+        is_fedora is defined or (ansible_distribution_major_version|int > 8 and ansible_distribution == 'RedHat')
     - name: Ensures /etc/dnsmasq.d/ dir exists
       file: path="/etc/dnsmasq.d/" state=directory
     - name: install fedora dnsmasq specific config
