--- a/playbooks/groups/osbs/deploy-cluster.yml
+++ b/playbooks/groups/osbs/deploy-cluster.yml
@@ -314,7 +314,13 @@
   tasks:
     - name: Ensures /etc/dnsmasq.d/ dir exists
       file: path="/etc/dnsmasq.d/" state=directory
-    - name: install fedora dnsmasq specific config
+    - name: install fedora dnsmasq specific top-config
+      copy:
+        src: "{{files}}/osbs/fedora-dnsmasq-master.conf.{{env}}"
+        dest: "/etc/dnsmasq.conf"
+      when:
+        is_fedora is defined or (ansible_distribution_major_version|int > 8 and ansible_distribution == 'RedHat')
+    - name: install fedora dnsmasq specific sub-config
       copy:
         src: "{{files}}/osbs/fedora-dnsmasq.conf.{{env}}"
         dest: "/etc/dnsmasq.d/fedora-dns.conf"
