flatpak-indexer: fixes for flatpak-indexer-build
* Output the build to the correct imagestream - it was outputing
  to the flatpak-indexer-tardiff stream from a cut-and-paste mistake
* Add a ImageChange trigger for the from: image - we want to trigger
  a rebuild if the ubi8/python-38 image changes by itself, even if
  the flatpak-indexer-tardiff image where we get the tardiff binary from
  isn't rebuilt.

Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/roles/openshift-apps/flatpak-indexer/templates/buildconfig.yml
+++ b/roles/openshift-apps/flatpak-indexer/templates/buildconfig.yml
@@ -39,7 +39,7 @@ spec:
   output:
     to:
       kind: ImageStream
-      name: flatpak-indexer-tardiff:latest
+      name: flatpak-indexer:latest
   postCommit:
     command:
     - tools/test.sh
@@ -74,6 +74,8 @@ spec:
       from:
         kind: ImageStreamTag
         name: flatpak-indexer-tardiff:latest
+  - type: ImageChange
+    imageChange: {}
 ---
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
