flatpak-indexer: fix kind for flatpak-indexer-build
Should be ImageStreamTag not ImageStream. We ended up with a destination
of flatpak-indexer:latest:latest, when a default tag of :latest was added.

Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/roles/openshift-apps/flatpak-indexer/templates/buildconfig.yml
+++ b/roles/openshift-apps/flatpak-indexer/templates/buildconfig.yml
@@ -38,7 +38,7 @@ metadata:
 spec:
   output:
     to:
-      kind: ImageStream
+      kind: ImageStreamTag
       name: flatpak-indexer:latest
   postCommit:
     command:
