flatpak-indexer: fix volumeName for flatpak-indexer-storage
The volumeName was a cut-and-paste error from flatpak-indexer-storage-redis

Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/roles/openshift-apps/flatpak-indexer/templates/storage.yml
+++ b/roles/openshift-apps/flatpak-indexer/templates/storage.yml
@@ -9,7 +9,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  volumeName: flatpak-indexer-redis-storage{{ '-stg' if env == 'staging' else '' }}
+  volumeName: flatpak-indexer-storage{{ '-stg' if env == 'staging' else '' }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
