--- a/roles/abrt/retrace-post/defaults/main.yml
+++ b/roles/abrt/retrace-post/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 
 # List of fedora versions for reposync
-rs_internal_fedora_vers: [31, 32, 33, rawhide]
-rs_internal_fedora_vers_removed: [24, 25, 26, 27, 28, 29, 30]
+rs_internal_fedora_vers: [32, 33, 34, rawhide]
+rs_internal_fedora_vers_removed: [24, 25, 26, 27, 28, 29, 30, 31]
 
 # List of architectures for reposync
 # armhfp disabled untill we get more space
