distgit/pagure: Let pagure to manage ssh keys in stg
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -50,7 +50,11 @@ ENABLE_DEL_PROJECTS = False
 ENABLE_DEL_FORKS = True
 ENABLE_GROUP_MNGT = False
 DEPLOY_KEY = False
+{% if env == 'staging' %}
+LOCAL_SSH_KEY = True
+{% else %}
 LOCAL_SSH_KEY = False
+{% endif %}
 ALLOW_DELETE_BRANCH = False
 EMAIL_ON_WATCHCOMMITS = False
 GIT_HOOK_DB_RO = True
