--- a/roles/distgit/pagure/templates/pagure.cfg
+++ b/roles/distgit/pagure/templates/pagure.cfg
@@ -68,7 +68,7 @@ GIT_URL_GIT = 'https://src.fedoraproject.org/'
 
 ### The IP addresses allowed for the internal endpoints
 {% if env == 'staging' %}
-IP_ALLOWED_INTERNAL = ['127.0.0.1', 'localhost', '::1', '10.5.128.177']
+IP_ALLOWED_INTERNAL = ['127.0.0.1', 'localhost', '::1', '10.5.128.177', '10.3.166.74']
 {% else %}
 IP_ALLOWED_INTERNAL = ['127.0.0.1', 'localhost', '::1', '10.5.126.51', '10.5.126.52', '10.3.163.74', '10.3.163.75']
 {% endif %}
