flatpak-indexer: fix typo in image change trigger for flatpak-indexer
The 'containerNames' parameter was incorrectly cut-and-pasted from
the flatpak-indexer-differ deployment config.

Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/roles/openshift-apps/flatpak-indexer/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/flatpak-indexer/templates/deploymentconfig.yml
@@ -71,7 +71,7 @@ spec:
     imageChangeParams:
       automatic: true
       containerNames:
-      - flatpak-indexer-differ
+      - flatpak-indexer
       from:
         kind: ImageStreamTag
         name: flatpak-indexer:latest
