flatpak-indexer: fix environment variable name for redis password
Match the environment variable in the deploymentconfig to that used
in the configmap (REDIS_PASSWORD)

Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/roles/openshift-apps/flatpak-indexer/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/flatpak-indexer/templates/deploymentconfig.yml
@@ -108,7 +108,7 @@ spec:
       - env:
         - name: FLATPAK_INDEXER_COMMAND
           value: differ
-        - name: REDISCLI_AUTH
+        - name: REDIS_PASSWORD
           valueFrom:
             secretKeyRef:
               name: redis-password
