flatpak-indexer: use stringData not data in secret.yml
This matches what we do for other applications.

--- a/roles/openshift-apps/flatpak-indexer/templates/secret.yml
+++ b/roles/openshift-apps/flatpak-indexer/templates/secret.yml
@@ -3,7 +3,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: redis-password
-data:
+stringData:
 {% if env == 'staging' %}
   password: {{ stg_flatpak_indexer_redis_password }}
 {% else %}
