--- a/roles/openshift-apps/flatpak-indexer/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/flatpak-indexer/templates/deploymentconfig.yml
@@ -34,7 +34,7 @@ spec:
               name: redis-password
               key: password
         - name: REDIS_URL
-          value: redis://redis.flatpak.svc.cluster.local:6379
+          value: redis://redis.flatpak-indexer.svc.cluster.local:6379
         image: flatpak-indexer:latest
         name: flatpak-indexer
         ports:
@@ -114,7 +114,7 @@ spec:
               name: redis-password
               key: password
         - name: REDIS_URL
-          value: redis://redis.flatpak.svc.cluster.local:6379
+          value: redis://redis.flatpak-indexer.svc.cluster.local:6379
         image: flatpak-indexer:latest
         name: flatpak-indexer-differ
         ports:
