playbooks / staging: adjust playbooks for staging to configure fedmsg if needed
When we setup things we didn't setup fedmsg in iad2 staging.
Now we are using it, so we should configure it until we get rid of it.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/groups/bodhi-backend.yml
+++ b/playbooks/groups/bodhi-backend.yml
@@ -33,7 +33,7 @@
   - { role: ipa/client, when: env == "staging" }
   - sudo
   - rkhunter
-  - { role: fedmsg/base, when: env != "staging" }
+  - fedmsg/base
 
   - role: nfs/client
     mnt_dir: '/mnt/fedora_koji'
