--- a/playbooks/groups/mailman.yml
+++ b/playbooks/groups/mailman.yml
@@ -99,8 +99,7 @@
     mailman_hyperkitty_admin_db_pass: "{{ mailman_hk_admin_db_pass }}"
     mailman_hyperkitty_db_pass: "{{ mailman_hk_db_pass }}"
     mailman_hyperkitty_cookie_key: "{{ mailman_hk_cookie_key }}"
-  -  { role: fedmsg/base,
-       when: deployment_type == "prod" }
+  - role: fedmsg/base
   # Set up for fedora-messaging
   - { role: rabbit/user,
       username: "mailman{{ env_suffix }}"}
