--- a/playbooks/groups/noc.yml
+++ b/playbooks/groups/noc.yml
@@ -64,7 +64,7 @@
   - { role: dhcp_server, when: datacenter == 'iad2' }
   - { role: tftp_server, when: datacenter == 'iad2' }
   - { role: nagios_server }
-  - { role: fedmsg/base, when: deployment_type == "prod" and datacenter != 'iad2'}
+  - { role: fedmsg/base }
 
   tasks:
   - name: install some packages which arent in playbooks
