--- a/playbooks/groups/notifs-backend.yml
+++ b/playbooks/groups/notifs-backend.yml
@@ -26,8 +26,7 @@
   - { role: fas_client, when: env != "staging" }
   - nagios_client
   - collectd/base
-  - { role: fedmsg/base,
-      when: deployment_type == "prod" }
+  - fedmsg/base
   # Set up for fedora-messaging
   - { role: rabbit/user,
       username: "notifs-backend{{ env_suffix }}"}
