--- a/playbooks/groups/notifs-web.yml
+++ b/playbooks/groups/notifs-web.yml
@@ -23,8 +23,7 @@
   - fas_client
   - collectd/base
   - mod_wsgi
-  - { role: fedmsg/base,
-      when: deployment_type == "prod" }
+  - role: fedmsg/base
   # Set up for fedora-messaging
   - { role: rabbit/user,
       username: "notifs-web{{ env_suffix }}"}
