--- a/playbooks/groups/wiki.yml
+++ b/playbooks/groups/wiki.yml
@@ -27,8 +27,7 @@
   - { role: fas_client, when: env != "staging" }
   - collectd/base
   - apache
-  - { role: fedmsg/base,
-      when: deployment_type == "prod" }
+  - fedmsg/base
   # Set up for fedora-messaging
   - { role: rabbit/user, username: "wiki{{ env_suffix }}", when: inventory_hostname.startswith('wiki01') }
   - { role: rabbit/queue, username: "wiki{{ env_suffix }}", queue_name: "wiki{{ env_suffix }}"}
