--- a/playbooks/groups/github2fedmsg.yml
+++ b/playbooks/groups/github2fedmsg.yml
@@ -55,5 +55,5 @@
 
   roles:
   - github2fedmsg
-  - { role: fedmsg/base, when: deployment_type == "prod" }
+  - fedmsg/base
   - { role: rabbit/user, when: deployment_type == "stg" }
