distgit/pagure: Turn off username lookup in dist-git
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -91,12 +91,13 @@ ALLOW_HTTP_PUSH = True
 
 PDC_URL = 'https://pdc{{ env_suffix }}.fedoraproject.org/rest_api/v1/'
 
-SSH_KEYS_USERNAME_LOOKUP = True
 SSH_KEYS_OPTIONS = 'restrict,command="/usr/libexec/pagure/aclchecker.py %(username)s"'
 
 {% if env == 'staging' %}
 GIT_AUTH_BACKEND = 'pagure'
 SSH_KEYS_USERNAME_EXPECT = 'git'
+{% endif %}
+SSH_KEYS_USERNAME_LOOKUP = True
 {% endif %}
 
 HTTP_REPO_ACCESS_GITOLITE = None
