--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -96,7 +96,7 @@ SSH_KEYS_OPTIONS = 'restrict,command="/usr/libexec/pagure/aclchecker.py %(userna
 {% if env == 'staging' %}
 GIT_AUTH_BACKEND = 'pagure'
 SSH_KEYS_USERNAME_EXPECT = 'git'
-{% endif %}
+{% else %}
 SSH_KEYS_USERNAME_LOOKUP = True
 {% endif %}
 
