--- a/roles/openshift-apps/toddlers/templates/email_overrides.toml
+++ b/roles/openshift-apps/toddlers/templates/email_overrides.toml
@@ -129,3 +129,5 @@
 "fedora@marcdeop.com" = "marcdeop@fedoraproject.org"
 # etingof
 "etingof@gmail.com" = "ietingof@redhat.com"
+# lzap - Lukas Zapletal:
+"lukas@zapletalovi.com" = "lzap@redhat.com"
