fas-stg: add app owners scoady and mobrien

--- a/playbooks/openshift-apps/fas-stg.yml
+++ b/playbooks/openshift-apps/fas-stg.yml
@@ -24,6 +24,8 @@
     appowners:
     - puiterwijk
     - pingou
+    - scoady
+    - mobrien
     allow_fas_db: true
   - role: openshift/imagestream
     app: fas
