Use `include_role` the right way
Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/playbooks/manual/noggin-deployment/reenroll-ipa-client.yml
+++ b/playbooks/manual/noggin-deployment/reenroll-ipa-client.yml
@@ -58,7 +58,8 @@
     when: reenroll_ipa_client
 
   - name: Apply the ipa/client role
-    include_role: ipa/client
+    include_role:
+      name: ipa/client
     when: reenroll_ipa_client
 
   - name: Fix ownership of directories in /home/fedora
