ipa/client: Fix warning about legacy vars
This needs to be run per every host in the play.

Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/hbac.yml
+++ b/roles/ipa/client/tasks/hbac.yml
@@ -86,6 +86,7 @@
       `ipa_client_shell_groups`
   ignore_errors: true
   when: fas_client_groups is defined
+  run_once: false
 
 - name: "Warn if IPA client variables are unset"
   fail:
