Add siddharthvipul1 to the POC project and to be able to view the prometheus instance.

--- a/playbooks/groups/os-cluster.yml
+++ b/playbooks/groups/os-cluster.yml
@@ -248,6 +248,7 @@
       - pingou
       - ralph
       - sanja
+      - siddharthvipul1
       - walters
       - zlopez
       changed_when: false
