--- a/roles/copr/frontend-cloud/tasks/main.yml
+++ b/roles/copr/frontend-cloud/tasks/main.yml
@@ -94,21 +94,7 @@
   tags:
   - config
 
-- name: copy apache files to conf.d (templates)
-  template: src="httpd/{{ item }}" dest="/etc/httpd/conf.d/{{ item }}"
-  with_items:
-  - "coprs.conf"
-  notify:
-  - reload httpd
-  tags:
-  - config
-
-- name: drop old and now unused coprs_ssl.conf
-  file: path=/etc/httpd/conf.d/coprs_ssl.conf state=absent
-  notify:
-  - reload httpd
-  tags:
-  - config
+- import_tasks: "httpd.yml"
 
 - name: enable services
   service: state=started enabled=yes name={{ item }}
