copr: use two processes at least to minimaze time when respawning

--- a/roles/copr/frontend-cloud/templates/httpd/coprs.conf
+++ b/roles/copr/frontend-cloud/templates/httpd/coprs.conf
@@ -3,11 +3,11 @@ Alias /robots.txt /var/www/html/robots.txt
 Alias "/db_dumps/" "/var/www/html/db_dumps/"
 
 WSGIDaemonProcess 127.0.0.1 user=copr-fe group=copr-fe processes=4 threads=5 display-name=other maximum-requests=8000 restart-interval=300 graceful-timeout=20
-WSGIDaemonProcess api user=copr-fe group=copr-fe threads=15 display-name=api maximum-requests=8000 graceful-timeout=20
-WSGIDaemonProcess backend user=copr-fe group=copr-fe threads=15 display-name=backend maximum-requests=8000 graceful-timeout=20
-WSGIDaemonProcess stats user=copr-fe group=copr-fe threads=15 display-name=stats maximum-requests=8000 graceful-timeout=20
-WSGIDaemonProcess tmp user=copr-fe group=copr-fe threads=15 display-name=tmp maximum-requests=8000 graceful-timeout=20
-WSGIDaemonProcess repo user=copr-fe group=copr-fe threads=15 display-name=repo maximum-requests=8000 graceful-timeout=20
+WSGIDaemonProcess api user=copr-fe group=copr-fe processes=2 threads=15 display-name=api maximum-requests=8000 graceful-timeout=20
+WSGIDaemonProcess backend user=copr-fe group=copr-fe processes=2 threads=15 display-name=backend maximum-requests=8000 graceful-timeout=20
+WSGIDaemonProcess stats user=copr-fe group=copr-fe processes=2 threads=15 display-name=stats maximum-requests=8000 graceful-timeout=20
+WSGIDaemonProcess tmp user=copr-fe group=copr-fe processes=2 threads=15 display-name=tmp maximum-requests=8000 graceful-timeout=20
+WSGIDaemonProcess repo user=copr-fe group=copr-fe processes=2 threads=15 display-name=repo maximum-requests=8000 graceful-timeout=20
 WSGIDaemonProcess packages user=copr-fe group=copr-fe processes=2 threads=2 maximum-requests=10 display-name=packages request-timeout=60
 WSGIDaemonProcess builds   user=copr-fe group=copr-fe processes=4 threads=2 maximum-requests=10 display-name=builds   request-timeout=180 socket-timeout=120
 # Separate process group just to easily observe what unnecessary trafic goes to
